Modified Alignment Bugs

--- a/src/components/AnimatedLetters/animatedLetters.scss
+++ b/src/components/AnimatedLetters/animatedLetters.scss
@@ -1,5 +1,5 @@
 .text-animate {
-    display: inline-block;
+    // display: inline-block;
     opacity: 0;
     animation: bounceIn 1s 1s;
     animation-fill-mode: forwards;
@@ -8,7 +8,7 @@
 
 .text-animate-hover {
     min-width: 10px;
-    display: inline-block;
+    // display: inline-block;
     animation-fill-mode: both;
 
     &:hover {
