--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -7,9 +7,9 @@
         left: 10%;
         top: 50%;
         transform: translateY(-50%);
-        width: 30%;
+        width: 40%;
         max-height: 90%;
-        margin-left: 50px;
+        margin-left: 40px;
     }
 
     h1 {
@@ -18,6 +18,7 @@
         margin: 0;
         font-family: 'Coolvetica';
         font-weight: 400;
+        clear: both;
 
         &::before {
             // content: '<h1>';
@@ -42,17 +43,26 @@
             opacity: 0.6;
         }
 
-        img {
-            width: 32px;
-            margin-left: 20px;
-            opacity: 0;
-            height: auto;
-            animation: rotateIn 1s linear both;
-            animation-delay: 1.4s;
-        }
+        // img {
+        //     width: 32px;
+        //     margin-left: 20px;
+        //     opacity: 0;
+        //     height: auto;
+        //     animation: rotateIn 1s linear both;
+        //     animation-delay: 1.4s;
+        // }
 
         @include small {
-            font-size: 48px;
+            font-size: 30px;
+            font-weight: 150;
+            font-family: 'sans-serif';
+            width: 80px;
+            display: inline-flexbox;
+        }
+
+        @include medium{
+            font-size: 40px;
+            font-weight: 250;
         }
     }
 
