--- a/src/components/Sidebar/side.scss
+++ b/src/components/Sidebar/side.scss
@@ -11,23 +11,23 @@
         display: block;
         // padding: 8px 0;
 
-        img {
-            display: block;
-            margin: 0px auto;
-            width: 60px;
-            height: auto;
+    //     img {
+    //         display: block;
+    //         margin: 0px auto;
+    //         width: 60px;
+    //         height: auto;
 
-            &.sub-logo {
-                width: 50px;
-            }
-        }
+    //         &.sub-logo {
+    //             width: 50px;
+    //         }
+    //     }
     }
 
     nav {
         display: blockblock;
         text-align: center;
         position: absolute;
-        height: 210px;
+        height: auto;
         top: 50%;
         margin-top: -120px;
         width: 100%;
