--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -24,13 +24,13 @@
 }
 
 @mixin medium {
-    @media (min-width: 791px) and (max-width: 991px) {
+    @media (min-width: 597px) and (max-width: 791px) {
         @content;
     }
 }
 
 @mixin small {
-    @media (max-width: 791px) {
+    @media (max-width: 597px) {
         @content;
     }
 }
